--- a/Big Data (TA)/Assignment 1/pandas.ipynb
+++ b/Big Data (TA)/Assignment 1/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from grade import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
        "9    Jerry  38.0               1"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +204,7 @@
        "2  Charlie  51.0               1"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
        "9    Jerry  38.0"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +390,7 @@
        "8  Ingrid  41.0               2"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +450,7 @@
        "3  Dan  47.0               5"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
        "6  George  NaN               3"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +619,7 @@
        "9    Jerry  38.0               1"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +700,7 @@
        "9   Jerry  38.0               1"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +724,7 @@
        "384.0"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +748,7 @@
        "42.666666666666664"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +772,7 @@
        "10"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +895,7 @@
        "6   George   NaN               3"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1029,7 @@
        "9    Jerry  38.0               1  big data"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1141,7 @@
        "9    Jerry  38.0"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1257,7 @@
        "9    Jerry  38.0               1"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1281,15 +1282,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[166], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgrade\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m grade_pandas(q1,q2,q3,q4,q5,q6,q7,q8,q9,q10,q11,q12,q13,q14,q15)\n",
+      "Cell \u001b[0;32mIn[80], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m grade_pandas(q1, q2, q3, q4, q5, q6, q7, q8, q9, q10, q11, q12, q13, q14, q15)\n",
       "File \u001b[0;32m~/Documents/Semester 6/Big Data (TA)/Assignment 1/grade.py:47\u001b[0m, in \u001b[0;36mgrade_pandas\u001b[0;34m(q1, q2, q3, q4, q5, q6, q7, q8, q9, q10, q11, q12, q13, q14, q15)\u001b[0m\n\u001b[1;32m     45\u001b[0m f\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mQuestion 8: \u001b[39m\u001b[39m{\u001b[39;00mdf\u001b[39m.\u001b[39mequals(q8)\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m df \u001b[39m=\u001b[39m orig[\u001b[39m'\u001b[39m\u001b[39mage\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39msum()\n\u001b[0;32m---> 47\u001b[0m f\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mQuestion 9: \u001b[39m\u001b[39m{\u001b[39;00mdf\u001b[39m.\u001b[39mequals(q9)\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     48\u001b[0m df \u001b[39m=\u001b[39m orig[\u001b[39m'\u001b[39m\u001b[39mage\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean()\n\u001b[1;32m     49\u001b[0m f\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mQuestion 10: \u001b[39m\u001b[39m{\u001b[39;00mdf\u001b[39m.\u001b[39mequals(q10)\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'numpy.float64' object has no attribute 'equals'"
      ]
     }
    ],
    "source": [
-    "from grade import *\n",
-    "grade_pandas(q1,q2,q3,q4,q5,q6,q7,q8,q9,q10,q11,q12,q13,q14,q15)"
+    "grade_pandas(q1, q2, q3, q4, q5, q6, q7, q8, q9, q10, q11, q12, q13, q14, q15)"
    ]
   }
  ],
